# budgetly

./: README.md  index.html  package-lock.json  package.json
api/: .env.example  .gitignore  pyproject.toml
api/api/: loginManager.py  main.py  models.py
api/prisma/: dev.db  schema.prisma
src/: App.tsx  constants.ts  main.tsx  types.d.ts
src/Components/: Aboutcard.tsx  AuthInput.tsx  Card.tsx  ContactIcons.tsx  Contactform.tsx  Copybtn.tsx  DS_Header.tsx  DeleteConfirmation.tsx  Filter.tsx  FloatingInput.tsx  Footer.tsx  HistoryCard.tsx  HistoryCardContainer.tsx  Modal.tsx  Select.tsx  body.tsx  card.jsx
src/Pages/: About.tsx  Contactus.tsx  Home.tsx  Login.tsx  Register.tsx
src/hooks/: useAuth.ts  useFloatingInput.ts
src/utils/: getCurrentUser.ts
