[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["max-programming <ui.sabuwala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
fastapi-login = "^1.8.2"
prisma = {git = "https://github.com/RobertCraigie/prisma-client-py", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
